# english-project-3

./: README.md
backend/: Cargo.toml
backend/math-battle/: Cargo.toml
backend/math-battle/src/: lib.rs  quiz.rs  room.rs  user.rs
backend/math-battle/src/quiz/: leaderboard.rs  lobby_id.rs  round.rs
backend/math-battle/src/quiz/leaderboard/: member.rs  score.rs
backend/math-battle/src/quiz/round/: expression.rs  round_id.rs  timeout.rs
backend/math-battle/src/quiz/round/expression/: infix_notation.rs  operation.rs  set.rs
backend/math-battle/src/room/: room_id.rs
backend/math-battle/src/user/: user_id.rs  username.rs
backend/src/: main.rs
frontend/: package-lock.json
